[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/enemies/mob.png" type="Texture" id=1]
[ext_resource path="res://src/characters/enemies/Mob.gd" type="Script" id=2]
[ext_resource path="res://src/characters/bullets/EnemyBullet.tscn" type="PackedScene" id=3]

[node name="Mob" type="Area2D" groups=["all", "enemy"]]
position = Vector2( 520, 308 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
enemy_bullet_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -101, -66, -2, 72, 100, -59 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 27.0001, 822 )
scale = Vector2( 54.15, 113.4 )
__meta__ = {
"_edit_group_": true
}

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="area_entered" from="." to="." method="_on_Mob_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
